--- a/server/templates/validate.html
+++ b/server/templates/validate.html
@@ -34,10 +34,10 @@
         <td align="center" style="padding: 0px 10px 0px 10px;">
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
             <tr>
-              <td bgcolor="#ffffff" align="right" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; line-height: 48px;">
+              <td bgcolor="#ffffff" align="right" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; line-height: 48px; border-top-left-radius: 4px;">
                 <img src="https://account.meteor2.io/logo.png" width="80" height="80" style="display: block; border: 0px; margin: 20px 15px 20px 20px" />
               </td>
-              <td bgcolor="#ffffff" align="left" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 48px; vertical-align: middle;">
+              <td bgcolor="#ffffff" align="left" valign="top" style="color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 48px; vertical-align: middle; border-top-right-radius: 4px;">
                 <h1 style="font-size: 30px; font-weight: 400; margin-bottom: 10px;">Meteor Next</h1>
               </td>
             </tr>
@@ -59,7 +59,9 @@
                     <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 20px 30px;">
                       <table width="100%" border="0" cellspacing="0" cellpadding="0">
                         <tr>
-                          <td align="center" style="border-radius: 20px;"><a href="#" target="_blank" style="font-size: 18px; font-family: Lato, Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; width:80%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Verify Email</a></td>
+                          <td align="center" style="border-radius: 20px;">
+                            <a href="https://account.meteor2.io/verify_email/{CODE}" target="_blank" style="font-size: 18px; font-family: Lato, Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; width:100%; padding-top:12px; padding-bottom:12px; border-radius: 5px; background-color: #2196f3; display: inline-block;">Verify Email</a>
+                          </td>
                         </tr>
                       </table>
                     </td>
@@ -74,11 +76,11 @@
             </tr>
             <tr>
               <td bgcolor="#ffffff" align="left" style="padding: 5px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
-                <a href="https://account.meteor2.io/code=htg5pxoh4KMdQ6Lwvw2LGc15uS7PSDUAd9PYwGTF6JU" style="color:#2196f3; margin: 0; font-weight: 400;">https://account.meteor2.io/code=htg5pxoh4KMdQ6Lwvw2LGc15uS7PSDUAd9PYwGTF6JU</a>
+                <a href="https://account.meteor2.io/verify_email/{CODE}" target="_blank" style="color:#2196f3; margin: 0; font-weight: 400;">https://account.meteor2.io/verify_email/{CODE}</a>
               </td>
             </tr>
             <tr>
-              <td bgcolor="#ffffff" align="left" style="padding: 5px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px;">
+              <td bgcolor="#ffffff" align="left" style="padding: 5px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 25px; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px;">
                 <p style="margin: 0; font-weight:400">This is an auto-generated email. Please do not reply to this email.</p>
               </td>
             </tr>
