--- a/server/templates/verify_email.html
+++ b/server/templates/verify_email.html
@@ -48,8 +48,8 @@
         <td align="center" style="padding: 0px 10px 0px 10px;">
           <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
             <tr>
-              <td bgcolor="#ffffff" align="left" style="padding:0px 20px 0px 20px; color: black; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 35px;">
-                <p style="text-align:center; font-size:24px; font-weight:400; margin-top:5px; margin-bottom:5px">Please verify your email address</p>
+              <td bgcolor="#ffffff" align="left" style="padding:0px 30px 0px 30px; color: black; font-family: 'Lato', Helvetica, Arial, sans-serif; line-height: 35px;">
+                <p style="text-align:left; font-size:24px; font-weight:400; margin:0px">Please verify your email address</p>
               </td>
             </tr>
             <tr>
