Improved Overall Design

--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,8 +1,10 @@
 $material-dark: (
-  'app-bar': #424242,
-  'bottom-navigation': #424242,
-  'background': #303030,
-  'cards': #424242,
-  'navigation-drawer': #424242,
-  'toolbar': #212121
+  // 'app-bar': #424242,
+  // 'bottom-navigation': #424242,
+  // 'background': #303030,
+  // 'cards': #424242,
+  // 'background': #323445,
+  // 'cards': #3d3d50,
+  // 'navigation-drawer': #424242,
+  // 'toolbar': #212121
 );
